# bcregistry-sre

./: .gitignore  index.yaml
.github/: CODEOWNERS.txt  copilot-instructions.md
.github/workflows/: backend-cd-ocp.yaml  backend-cd.yaml  backend-ci.yaml  backend-cronjob-cd-ocp.yaml  backend-job-cd.yaml  cloud-run-service-cd.yaml  frontend-cd.yaml  frontend-ci-coverage.yaml  frontend-ci.yaml  oas-ci.yaml  restart-services-hourly.yaml  restart-services.yaml  terraform-gcs.yaml  ui-cd.yaml  vault-service-cd.yml
charts/bcregistry-api/: Chart.yaml  values.yaml
charts/bcregistry-cronjob/: values.yaml
charts/bcregistry-queue/: Chart.yaml  values.yaml
charts/bcregistry-ui/: Chart.yaml
composite-actions/api-cd/: action.yaml
gcp/cloud_deploy/: clouddeploy-targets.yaml
gcp/codeql-alerts/: README.md  add_label.sh  env  find_silver_envvars.sh  main.py  requirements.txt
gcp/gcp-resource-scanner/: .env.sample  Dockerfile  README.md  run.sh
gcp/iam/: add_user.sh  remove_user.sh  sre.sh
gcp/project_setup/alert_generator/: .gitignore  configs.yml  generate_alerts.py  pyproject.toml
gcp/project_setup/alert_generator/templates/: cloud_run_errors.yaml.j2  cloud_run_runtime.yaml.j2  cloud_run_uptime.yaml.j2  cloud_sql_runtime.yaml.j2
gcp/scripts/: __main__.py  find_silver_envvars.sh  generate_sre_report.py  label_cloudrun_services.py  list_apigee_proxies.sh  pyproject.toml  scan_1password_silver_refs.py  scan_apigee_endpoints.py  scan_app_inventory.py  scan_gcp_projects.py  scan_openshift_silver_refs.py  scan_uptime_checks.py  scan_website_silver_refs.py  sre_report_template.md.j2  suspicious.py  tech_stacks.py
gcp/terraform/: .gitignore  .terraform.lock.hcl  _config_environment_custom_roles.auto.tfvars  _config_global_custom_roles.auto.tfvars  _config_project_dev.auto.tfvars  _config_project_other.auto.tfvars  _config_project_prod.auto.tfvars  _config_project_test.auto.tfvars  global_custom_roles.auto.tfvars  main.tf  project_account_bindings.auto.tfvars  tf.sh  variables.tf  versions.tf
images/sre-cd-runner/: Dockerfile  build.sh  functions.sh
notify-api/: Dockerfile copy  pyproject.toml
notify-api/devops/gcp/: clouddeploy-targets.yaml
notify-api/tests/: conftest.py
redirectpage/: Makefile  index.html  nginx.conf
vault-service/: Makefile
vault-service/devops/: versions.yaml
vault-service/scripts/: 1pass.sh
(+63 files in other folders)
