[tool.poetry]
name = "notify-api"
version = "2.0.0"
description = ""
authors = ["patrick <patrick.wei@gov.bc.ca>"]
readme = "README.md"
repository = "https://github.com/bcgov/bcregistry-sre/notify-api"
packages = [{include = "notify_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
launchdarkly-server-sdk = "^8.1.1"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
psycopg2 = "^2.9.5"
flask-babel= "^3.0.1"
Flask-Cors= "^3.0.10"
Flask-Pydantic= "^0.11.0"
flask-jwt-oidc = "0.3.0"
pydantic = "^1.10.5"
sentry-sdk = "^1.15.0"
email-validator = "^1.3.1"
notifications-python-client = "^7.0.0"
beautifulsoup4 = "^4.11.2"
phonenumbers = "^8.13.6"
sqlalchemy-continuum = "^1.3.14"

[tool.poetry.group.test.dependencies]
pexpect = "^4.8.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
faker = "^15.1.1"
freezegun= "^1.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
