[project]
name = "pwei1018"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-monitoring>=2.28.0",
    "google-cloud-resource-manager>=1.15.0",
    "google-cloud-run>=0.12.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "seaborn>=0.13.2",
]
